tests/snapshots/resolve_position@aarch64-apple-darwin-2.snap
---
source: tests/mod.rs
expression: addrs
snapshot_kind: text
---
ResolvedAddress {
    address: "0x100000b38",
}
