tests/snapshots/resolve_position@aarch64-unknown-linux-gnu-2.snap
---
source: tests/mod.rs
expression: addrs
snapshot_kind: text
---
ResolvedAddress {
    address: "0x6620",
}
