tests/snapshots/resolve_position@aarch64-unknown-linux-gnu.snap
---
source: tests/mod.rs
expression: addrs
snapshot_kind: text
---
ResolvedAddress {
    address: "0x6398",
}
