tests/snapshots/resolve_position@x86_64-apple-darwin.snap
---
source: tests/mod.rs
expression: addrs
snapshot_kind: text
---
ResolvedAddress {
    address: "0x1000009df",
}
